--- a/examples/charlists/README
+++ b/examples/charlists/README
@@ -20,7 +20,7 @@ in; it makes sense to redo this time to time.
   
 for %f in (*) do ( env -u PERL5OPT D:\Programs\cygwin.zip\cygwin\bin\perl.exe -I %xHOME%/ru-pho-keyboard/UI-KeyboardLayout/lib  -wC31 %xHOME%/ru-pho-keyboard/UI-KeyboardLayout/examples/print_nameslist.pl %f  >o\%f-charnamelist )
 cd o
-for %f in (*) do ( sort %f ../../../../ooo-us ../../../../ooo-us | uniq -u > ..\c\diff-%f )
+for %f in (*) do ( sort %f ../../../../ooo-us ../../../../ooo-us | uniq -u | egrep -v "^(e|f[0-7])" > ..\c\diff-%f )
 
 ============= Check phonetics against presernt AltGr-// bindings
 	Separate the DEADKEY sections into sub_sup
